- Add color scheme - Fix colors for contrast - Bug removal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,17 @@
 /* Styling for the entirety of the page and the header  */
 /* CSS HEX */
-:root{
---bdazzled-blue: #3d5a80ff;
---pale-cerulean: #98c1d9ff;
---light-cyan: #e0fbfcff;
---burnt-sienna: #ee6c4dff;
---gunmetal: #293241ff;
+:root {
+  --bdazzled-blue: #3d5a80ff;
+  --pale-cerulean: #98c1d9ff;
+  --light-cyan: #e0fbfcff;
+  --burnt-sienna: #ee6c4dff;
+  --gunmetal: #293241ff;
 }
-*{
+* {
 }
 html {
   font-size: 16px;
-  color: var(--light-cyan);
+  color: var(--gunmetal);
 }
 body {
   width: 80vw;
@@ -21,56 +21,93 @@ body {
 }
 header {
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
+  align-items: center;
   margin-bottom: 3vh;
-  color: var(--burnt-sienna);
+  margin-top: 3vh;
+  color: var(--light-cyan);
 }
-#title {
-  font-size: 2rem;
+.title {
+  margin: 0 auto;
+  font-size: 2.2rem;
+  margin-bottom: 0.5rem;
   display: inline;
 }
 .timerLabel {
   display: inline;
+  margin: 0 auto;
 }
 #timer {
   float: right;
   display: inline;
-  font-size: 2rem;
+  font-size: 1.2rem;
+  padding-top: 0.8rem;
 }
 /* Start of styling for the game area */
-#startButton, #submitButton, #clearButton, #viewHighscores, #mainMenu {
-    background-color: var(--bdazzled-blue);
+#startButton,
+#submitButton,
+#clearButton,
+#viewHighscores,
+#mainMenu {
+  background-color: var(--bdazzled-blue);
   border: 2px solid #020353;
   color: var(--light-cyan);
-  padding: 1em 1.5em;
+  padding: 0.6em 0.9em;
   text-align: center;
   text-decoration: none;
   font-size: 1em;
   display: block;
   width: auto;
   border-radius: 3px;
-  box-shadow: 3px 3px 8px 0 #000; /* h-offset v-offset blur spread color */
-  margin: .8rem auto;}
-  #startButton{
+  box-shadow: 3px 3px 8px 0 var(--gunmetal); /* h-offset v-offset blur spread color */
+  margin: 0.8rem auto;
+}
+#startButton {
   position: absolute;
   top: 50%;
   left: 50%;
+  font-size: 2rem;
   transform: translate(-50%, -50%);
 }
-.scores{
-  font-size: 1.5rem;
+
+.scores {
+  font-size: 1.2rem;
+}
+.scoreLabel {
+  font-size: 1.3rem;
+  font-weight: bold;
+  padding-top: 0.2rem;
+}
+.newScore {
+  font-size: 1rem;
+  font-size: 1.2rem;
+  color: var(--gunmetal) !important;
+}
+.highscoreEL {
+  margin: 0.3rem auto;
+  text-align: center;
+}
+h2 {
+  font-size: 2rem;
+}
+h1 {
+  font-size: 2.4rem;
 }
 .gameArea {
   position: relative;
-  background: var(--burnt-sienna);
-  height: 60vh;
+  background: var(--light-cyan);
+  min-height: 55vh;
+  padding-bottom: 2rem;
   width: 100%;
   margin: 0 auto;
+  border-radius: 25px;
 }
 .questionArea {
   text-align: center;
   display: block;
-  padding: 1rem;
+  padding: 1.2rem 0px;
+  margin: 1rem 0px;
 }
 #questionSpan {
   font-size: 1.4rem;
@@ -83,18 +120,18 @@ header {
   bottom: 10%;
   display: none;
 }
-.answer{
+
+h3.answer {
   background: var(--bdazzled-blue);
-}
-h3 {
   margin: 0.2rem;
   display: block;
-  font-size: 1rem;
+  font-size: 0.9rem;
   width: 100%;
-  border: 3px solid black;
-  background: blue;
-  padding: 1rem 0.3rem;
-  color: white;
+  border: 3px solid var(--gunmetal);
+  border-radius: 10px;
+  padding: 1rem 1.6rem;
+  text-align: center;
+  color: var(--light-cyan);
 }
 h3:hover {
   border: 3px dotted black;
@@ -102,49 +139,88 @@ h3:hover {
 }
 .highscore-container {
   /* display:none; */
-  margin: 2rem;
   width: auto;
-  margin: 2rem auto; 
-  text-align: center; 
+  margin: 0.3rem auto !important;
+  text-align: center;
   display: none;
 }
-.hidden{
-  display:none;
+.hidden {
+  display: none;
 }
-.show{
-  display:block;
+.show {
+  display: block;
 }
-.show-inline{
+.show-inline {
   display: inline;
 }
-h2 {
-  font-size: 2rem;
+.scoreHeader {
+  padding-bottom: 0.4rem;
+  font-size: 1.4rem;
 }
-h1 {
-  font-size: 2.4rem;
-}
-.scoreHeader{
-  padding-bottom: 1rem;
-  
-}
-.highscoreEntry{
+.highscoreEntry {
   width: 100%;
-    margin: 0 auto;
-    text-align: center;
+  margin: 0 auto;
+  text-align: center;
 }
-#highscoreForm{
-    display:none;
-    margin: 0 auto;
-    max-width: auto;
-    text-align: center;
+#highscoreForm {
+  display: none;
+  margin: 0 auto;
+  max-width: auto;
+  text-align: center;
 }
-#clearButton{
+input[type="text"] {
+  width: 60%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid var(--gunmetal);
+  border-radius: 9px;
+  box-sizing: border-box;
+}
+#clearButton {
   display: none;
 }
-#viewHighscores{
-  display:block;
+#viewHighscores {
+  display: block;
   margin: 1rem auto;
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
 }
-#mainMenu{
+#mainMenu {
   display: none;
+}
+@media only screen and (min-width: 360px) {
+  header {
+    flex-direction: column;
+  }
+  .title {
+    font-size: 2.8rem;
+    margin: 0;
+  }
+  .scoreHeader {
+    font-size: 2.2rem;
+  }
+  h3.answer {
+    font-size: 1rem;
+  }
+}
+@media only screen and (min-width: 568px) {
+  header {
+    flex-direction: row;
+  }
+  .title {
+    font-size: 2.6rem;
+    margin: 0;
+  }
+  .scoreHeader {
+    font-size: 3rem;
+  }
+  h3.answer {
+    font-size: 1.4rem;
+  }
+  #questionSpan {
+    font-size: 1.8rem;
+  }
 }
